better docs for updatemask

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -277,12 +277,13 @@ paths:
               type: object
               properties:
                 updateMask:
-                  type: array
-                  example:
-                    - appName
-                  items:
-                    type: string
-                    description: Fields to update.
+                  allOf:
+                    - $ref: '#/components/schemas/UpdateMask'
+                    - items:
+                        type: string
+                        enum:
+                          - appName
+                          - name
                 project:
                   type: object
                   properties:
@@ -494,15 +495,16 @@ paths:
               type: object
               properties:
                 updateMask:
-                  type: array
-                  example:
-                    - externalRef
-                    - provider
-                    - clientId
-                    - clientSecret
-                  items:
-                    type: string
-                    description: Fields to update.
+                  allOf:
+                    - $ref: '#/components/schemas/UpdateMask'
+                    - items:
+                        type: string
+                        enum:
+                          - externalRef
+                          - clientId
+                          - clientSecret
+                          - provider
+                          - scopes
                 providerApp:
                   type: object
                   properties:
@@ -1101,14 +1103,19 @@ paths:
               type: object
               properties:
                 updateMask:
-                  type: array
-                  example:
-                    - connectionId
-                    - config.content.write.objects.account
-                    - config.content.write.objects.interview\.leads
-                  items:
-                    type: string
-                    description: Fields to update. In case the mask is being used to update an object and the object's name contains special characters like a period, a forward slash or a colon, you must escape them using a backslash.
+                  allOf:
+                    - $ref: '#/components/schemas/UpdateMask'
+                    - items:
+                        type: string
+                        enum:
+                          - connectionId
+                          - config.revisionId
+                          - config.createdBy
+                          - config.content.read.objects.*
+                          - config.content.read.objects
+                          - config.content.write.objects.*
+                          - config.content.write.objects
+                          - config.content.subscribe.objects.*
                 installation:
                   type: object
                   properties:
@@ -2225,14 +2232,14 @@ paths:
                 - destination
               properties:
                 updateMask:
-                  type: array
-                  example:
-                    - name
-                    - metadata.url
-                    - metadata.headers
-                  items:
-                    type: string
-                    description: fields to update.
+                  allOf:
+                    - $ref: '#/components/schemas/UpdateMask'
+                    - items:
+                        type: string
+                        enum:
+                          - name
+                          - metadata.url
+                          - metadata.headers
                 destination:
                   type: object
                   properties:
@@ -2422,12 +2429,12 @@ paths:
                 - org
               properties:
                 updateMask:
-                  type: array
-                  example:
-                    - label
-                  items:
-                    type: string
-                    description: fields to update.
+                  allOf:
+                    - $ref: '#/components/schemas/UpdateMask'
+                    - items:
+                        type: string
+                        enum:
+                          - label
                 org:
                   type: object
                   properties:
@@ -3242,10 +3249,17 @@ components:
         - connection
       properties:
         updateMask:
-          type: array
-          items:
-            type: string
-          description: The fields to update.
+          allOf:
+            - $ref: '#/components/schemas/UpdateMask'
+            - items:
+                type: string
+                enum:
+                  - providerWorkspaceRef
+                  - providerMetadata
+                  - apiKey
+                  - basicAuth
+                  - oauth2ClientCredentials
+                  - oauth2PasswordCredentials
         connection:
           $ref: "#/components/schemas/ConnectionRequest"
     ConnectionRequest:
@@ -3568,15 +3582,14 @@ components:
         - apiKey
       properties:
         updateMask:
-          type: array
-          example:
-            - label
-            - active
-            - scopes
-          items:
-            type: string
-            description: fields to update.
-            example: label
+          allOf:
+            - $ref: '#/components/schemas/UpdateMask'
+            - items:
+                type: string
+                enum:
+                  - active
+                  - label
+                  - scopes
         apiKey:
           type: object
           properties:
@@ -3824,6 +3837,19 @@ components:
           type: string
           description: If present, set this value against your 'pageToken' query parameter in the next API call, which will retrieve the next set of results.
           example: Q9JT+2qfys28V4ODN+UayA==
+    UpdateMask:
+      type: array
+      description: |
+        Array of field paths specifying which fields to update.
+        Uses dot notation for nested fields (e.g., "config.revision", "metadata.tags").
+
+        **Field Path Rules:**
+        - Use dot notation for nested objects: `parent.child.field`
+        - Escape special characters: `field\.with\.dots`, `field\:with\:colons`
+        - Array elements not directly addressable
+        - Only explicitly allowed fields can be updated
+
+      example: ["name", "config.revision", "metadata.tags"]
   securitySchemes:
     APIKeyHeader:
       type: apiKey
