[ENG-2208] Get integration endpoint (#190)
* get integration endpoint

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -657,6 +657,45 @@ paths:
               schema:
                 $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
       x-codegen-request-body-name: integration
+  /projects/{projectIdOrName}/integrations/{integrationIdOrName}:
+    get:
+      summary: Get an integration by ID or name
+      operationId: getIntegration
+      tags: ["Integration"]
+      parameters:
+        - name: integrationIdOrName
+          in: path
+          required: true
+          description: The integration ID or name.
+          schema:
+            type: string
+          example: 123e4567-e89b-12d3-a456-426614174000
+        - name: projectIdOrName
+          in: path
+          required: true
+          description: The Ampersand project ID or project name.
+          schema:
+            type: string
+          example: my-project
+      responses:
+        200:
+          description: The integration
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Integration"
+        404:
+          description: Integration not found
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/InputValidationProblem"
+        default:
+          description: Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: "../problem/problem.yaml#/components/schemas/ApiProblem"
   /projects/{projectIdOrName}/integrations/{integrationId}:
     delete:
       summary: Delete an integration
