--- a/api/api.yaml
+++ b/api/api.yaml
@@ -9,7 +9,7 @@ paths:
     post:
       operationId: oauthConnect
       summary: Get URL for OAuth flow
-      description: Generate a URL for the browser to render to kick off OAuth flow.
+      description: Generate a URL for the browser to render to kick off OAuth flow. You can use this endpoint as an alternative to the [prebuilt UI components](https://docs.withampersand.com/embeddable-ui-components).
       tags: ["OAuth"]
       requestBody:
         content:
@@ -4302,13 +4302,10 @@ components:
       type: apiKey
       name: X-Api-Key
       in: header
-    APIKeyQueryParam:
-      type: apiKey
-      name: apiKey
-      in: query
     Bearer:
-      type: apiKey
-      name: Authorization
-      in: header
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
 security:
   - APIKeyHeader: []
+  - Bearer: []
