--- a/api/write.yaml
+++ b/api/write.yaml
@@ -8,6 +8,7 @@ paths:
   /projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}:
     post:
       summary: Write records
+      description: Create or update records in a SaaS instance. See [Write actions](https://docs.withampersand.com/write-actions) for details.
       operationId: writeRecords
       tags: ["Write"]
       parameters:
