--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -206,7 +206,7 @@ components:
             example:
               - name
               - domain
-        watchOptionalFields:
+        watchSelectedOptionalFields:
           type: boolean
           description: If true, the integration will watch optional fields for updates.
           example: true
